[tool.poetry]
name = "sonq"
version = "0.1.4"
authors = ["Chun Li"]
description = "A query tool for SON like objects, for example, json/jsonl and bson."
readme = "README.md"
homepage = "https://github.com/socrateslee/sonq"
repository = "https://github.com/socrateslee/sonq"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

[tool.poetry.scripts]
sonq='sonq.cmd:main'

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.9.0"